# M.A.R.V.I.N

./: .gitignore  README.md  README.md.md  draw.py  lexer.py  main.py  main.vin  maindocs.md  parser.out  parser.py  parsetab.py  pyproject.toml  setup.py  test.py
docs/: syntax.md
marvin/: errors.py  lexer.py  parser.py  physics.py
marvin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/: draw.py
